; ModuleID = '/home/carl/AnghaBench/kphp-kdb/filesys/extr_filesys-xfs-engine.c_curfile_data_alloc.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/filesys/extr_filesys-xfs-engine.c_curfile_data_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, %struct.TYPE_3__, i32 }
%struct.TYPE_3__ = type { i32 }

@curfile = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@allocated_curfile_data_ptr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @curfile_data_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @curfile_data_alloc(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @curfile, i32 0, i32 2), align 4
  %5 = call i32 @dyn_mark(i32 %4)
  %6 = load i32, i32* %2, align 4
  %7 = shl i32 %6, 16
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = icmp ugt i32 %8, 16777216
  br i1 %9, label %10, label %15

10:                                               ; preds = %1
  %11 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @curfile, i32 0, i32 1, i32 0), align 4
  %12 = call i32 @malloc(i32 %11)
  store i32 %12, i32* @allocated_curfile_data_ptr, align 4
  store i32 %12, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @curfile, i32 0, i32 0), align 4
  %13 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @curfile, i32 0, i32 0), align 4
  %14 = call i32 @assert(i32 %13)
  br label %18

15:                                               ; preds = %1
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @zmalloc(i32 %16)
  store i32 %17, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @curfile, i32 0, i32 0), align 4
  br label %18

18:                                               ; preds = %15, %10
  ret void
}

declare dso_local i32 @dyn_mark(i32) #1

declare dso_local i32 @malloc(i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @zmalloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
